/*
 *  Copyright 2019 Google Inc. All Rights Reserved.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

syntax = "proto2";

package goosci;

import "caption.proto";

option java_package = "com.google.android.apps.forscience.whistlepunk.metadata";
option java_outer_classname = "GoosciLabel";
option objc_class_prefix = "GSJ";
option optimize_for = LITE_RUNTIME;

/*
 * Label protobuf definition
 * Added in V2.
 */
message Label {
  // The ID is unique within an experiment, but cannot be assumed to be unique
  // across experiments, as users may "copy" entire experiments from Drive. This
  // ID should probably be a unique GUID.
  optional string labelId = 1;

  // The time in ms since the epoch which represents this label in time.
  // This may be the time at which the label was created, but some labels
  // have editable timestamps.
  optional int64 timestampMs = 2;

  // The time that the label was created. This is not editable.
  optional int64 creationTimeMs = 3;

  // An optional user-added caption. Not all labels will make use of this field.
  // Currently text labels will not use this, but picture, trigger, and snapshot
  // will.
  optional Caption caption = 4;

  enum ValueType {
    TEXT = 1;     // A text label.
                  // This ValueType is associated with protoData field of
                  // text_label_value.proto.
    PICTURE = 2;  // A label that has a picture and may also have a text
                  // caption. This ValueType is associated with protoData of
                  // picture_label_value.proto.
    SENSOR_TRIGGER = 3;  // A label created from a sensor trigger.
                         // This ValueType is associated with protoData field of
                         // sensor_trigger_label_value.proto.
    SNAPSHOT = 4;  // A label with value snapshot(s) for one or more sensors.
                   // This ValueType is associated with protoData of
                   // snapshot_label_value.proto.
    SKETCH = 5;    // A label with a sketch. This ValueType is associated with
                   // protoData of sketch_label_value.proto.
  }

  // The type this label represents. This can be used to reference the type of
  // proto_data.
  optional ValueType type = 5;

  // A proto can be written to this field to represent the label's data.
  // See ValueType above for which proto will be used in protoData for each
  // ValueType.
  optional bytes protoData = 6;
}
