/*
 *  Copyright 2019 Google Inc. All Rights Reserved.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

syntax = "proto2";

package goosci;

option java_package = "com.google.android.apps.forscience.whistlepunk.metadata";
option java_outer_classname = "GoosciPictureLabelValue";
option objc_class_prefix = "GSJ";
option optimize_for = LITE_RUNTIME;

/*
 * A value that can be stored in the proto_data field of label.proto, to store
 * data about a picture. Added in V2.
 */
message PictureLabelValue {
  // The path to the picture file. This is relative to the experiments folder,
  // for example: if the filePath is "assets/picture.jpg", and the experiment is
  // stored in folder "experiment_17", this means the picture can be loaded from
  // "experiment_17/assets/picture.jpg"
  optional string filePath = 1;
};
